@@ -15,16 +15,23 @@ dependencies {
     implementation("io.insert-koin:koin-core:4.0.2")
     testImplementation("io.kotest:kotest-runner-junit5:5.7.2")
     testImplementation("io.kotest:kotest-assertions-core:5.7.2")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.10.0")
     testImplementation("com.google.truth:truth:1.4.2")
+    testImplementation("io.mockk:mockk:1.14.9")
 
-    //testImplementation("org.junit.jupiter:junit=junit-jupiter-api:5.12.0-M1")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2")
+
+
 }
 
 kotlin {
-    jvmToolchain(25)
+    jvmToolchain(24)
 }
 
 tasks.test {
     useJUnitPlatform()
+}
+tasks.test {
+    useJUnitPlatform()
+    // أضف هذا السطر لإخفاء تحذيرات Unsafe
+    jvmArgs("--add-opens=java.base/sun.misc=ALL-UNNAMED")
 }
